# QML

./: .gitignore  CLAUDE.md  Makefile  README.md  notes.md  pyproject.toml  pytest.ini  qml-schema.json
.claude/commands/: evaluate-questionnaire.md
ICAI/: .gitignore  Makefile  icai2026-QML.tex  icai2026-peter-saghelyi.aux  icai2026-peter-saghelyi.bbl  icai2026-peter-saghelyi.bcf  icai2026-peter-saghelyi.fdb_latexmk  icai2026-peter-saghelyi.fls  icai2026-peter-saghelyi.run.xml  icai2026-peter-saghelyi.tex  icai2026.cls  references.bib
askalot_qml/: CLAUDE.md  __init__.py  cookies.txt  pyproject.toml
askalot_qml/api/: __init__.py  analysis_blueprint.py  flow_blueprint.py  validation_blueprint.py
askalot_qml/core/: __init__.py  analysis_processor.py  flow_processor.py  python_runner.py  qml_diagram.py  qml_engine.py  qml_layout.py  qml_loader.py  qml_topology.py  validation_processor.py
askalot_qml/models/: __init__.py  item_proxy.py  qml_state.py  questionnaire_state.py  table.py
askalot_qml/schema/: __init__.py  qml-schema.json
askalot_qml/z3/: __init__.py  global_formula.py  item_classifier.py  path_based_validation.py  pragmatic_compiler.py  static_builder.py
docs/thesis/: CLAUDE.md  Makefile  compile_thesis.sh  elteikthesis.cls  fpx3h0.bib  fpx3h0_en.tex
evaluation/: CCHS_2005_Health.qml  SHS_2000_Household_Spending.qml
evaluation/ICS-hun/: ICS_kerdezesi_protokoll_v2.0_2023.12.19.md  ICS_kerdezesi_protokoll_v2.0_2023.12.19.qml  question_inventory.md
evaluation/reference-questionnaires/: ACS_2025.md  ACS_2025.qml  ACS_2025_question_inventory.md  BRFSS_2023.md  BRFSS_2023.qml  BRFSS_2023_Analysis.md  BRFSS_2023_question_inventory.md  DHS8_Mans.md  DHS8_Mans_QRE_EN_03Feb2023_DHSQ8.qml  DHS8_Mans_question_inventory.md  DHS8_Womans.md  DHS8_Womans_QRE_EN_14Feb2023_DHSQ8.qml  DHS8_Womans_question_inventory.md  Demographics.md  Demographics.qml  Demographics_Analysis.md  Demographics_question_inventory.md  ESS12-source-questionnaire.qml  ESS12.md  ESS12.qml.yaml  ESS12_question_inventory.md
evaluation/statcan-questionnaires/: CCHS_2005_Health.md  CCHS_2005_Health_Analysis.md  CCHS_2005_Health_question_inventory.md  GSS_1999_Victimization.md  GSS_1999_Victimization.qml  GSS_1999_Victimization_Analysis.md  GSS_1999_Victimization_question_inventory.md  GSS_Time_Use.md  GSS_Time_Use.qml  GSS_Time_Use_Analysis.md  GSS_Time_Use_question_inventory.md  LFS_Labour_Force.md  LFS_Labour_Force.qml  LFS_Labour_Force_Analysis.md  LFS_Labour_Force_question_inventory.md  NLSCY_Children_Youth.md  NLSCY_Children_Youth.qml  NLSCY_Children_Youth_Analysis.md  (+19 more)
tests/: conftest.py
(+57 files in other folders)
